# SimpleMathLib

./: CMakeLists.txt  README.md
cmake/: MathLibConfig.cmake
include/: MathLib.h
src/: MathLib.cpp
